Improve building inventory sorting UX