@@ -4,15 +4,6 @@ import com.ldtteam.blockui.Pane;
 import com.ldtteam.blockui.controls.*;
 import com.ldtteam.blockui.views.BOWindow;
 import com.ldtteam.blockui.views.ScrollingList;
-import no.monopixel.slimcolonies.api.colony.buildings.views.IBuildingView;
-import no.monopixel.slimcolonies.api.crafting.ItemStorage;
-import no.monopixel.slimcolonies.core.tileentities.TileEntityRack;
-import no.monopixel.slimcolonies.api.util.MessageUtils;
-import no.monopixel.slimcolonies.api.util.Utils;
-import no.monopixel.slimcolonies.api.util.constant.Constants;
-import no.monopixel.slimcolonies.core.client.render.worldevent.HighlightManager;
-import no.monopixel.slimcolonies.core.client.render.worldevent.highlightmanager.TimedBoxRenderData;
-import no.monopixel.slimcolonies.core.colony.buildings.AbstractBuilding;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.core.BlockPos;
@@ -23,13 +14,21 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
+import no.monopixel.slimcolonies.api.colony.buildings.views.IBuildingView;
+import no.monopixel.slimcolonies.api.crafting.ItemStorage;
+import no.monopixel.slimcolonies.api.util.MessageUtils;
+import no.monopixel.slimcolonies.api.util.Utils;
+import no.monopixel.slimcolonies.api.util.constant.Constants;
+import no.monopixel.slimcolonies.core.client.render.worldevent.HighlightManager;
+import no.monopixel.slimcolonies.core.client.render.worldevent.highlightmanager.TimedBoxRenderData;
+import no.monopixel.slimcolonies.core.colony.buildings.AbstractBuilding;
+import no.monopixel.slimcolonies.core.tileentities.TileEntityRack;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
 
 import java.time.Duration;
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static no.monopixel.slimcolonies.api.util.constant.TranslationConstants.MESSAGE_LOCATING_ITEMS;
 import static no.monopixel.slimcolonies.api.util.constant.WindowConstants.*;
@@ -58,7 +57,7 @@ public class WindowHutAllInventory extends AbstractWindowSkeleton
     /**
      * The sortDescriptor so how we want to sort
      */
-    private int sortDescriptor = 0;
+    private int sortDescriptor = COUNT_DESC_SORT;
 
     /**
      * The building associated to the GUI.
@@ -136,10 +135,10 @@ public class WindowHutAllInventory extends AbstractWindowSkeleton
                     final int color = 0x80000000 | (Mth.clamp((int) (0xff * (2.0f - count / 32.0f)), 0, 255) << 16)
                         | (Mth.clamp((int) (0xff * count / 32.0f), 0, 255) << 8);
                     HighlightManager.addHighlight("inventoryHighlight", blockPos.toString(),
-                      new TimedBoxRenderData(blockPos)
-                        .setDuration(Duration.ofSeconds(60))
-                        .addText("" + count)
-                        .setColor(color));
+                        new TimedBoxRenderData(blockPos)
+                            .setDuration(Duration.ofSeconds(60))
+                            .addText("" + count)
+                            .setColor(color));
                 }
             }
         }
@@ -154,35 +153,19 @@ public class WindowHutAllInventory extends AbstractWindowSkeleton
     }
 
     /**
-     * Increments the sortDescriptor and sets the GUI Button accordingly Valid Stages 0 - 4 NO_SORT 0   No Sorting, like wysiwyg ASC_SORT 1   Name Ascending DESC_SORT 2   Name
-     * Descending COUNT_ASC_SORT 3   Itemcount Ascending COUNT_DESC_SORT 4   Itemcount Descending
+     * Toggles between COUNT_DESC_SORT (most abundant first) and ASC_SORT (alphabetical A-Z)
      **/
     private void setSortFlag()
     {
-        sortDescriptor++;
-        if (sortDescriptor > 4)
+        if (sortDescriptor == COUNT_DESC_SORT)
         {
-            sortDescriptor = NO_SORT;
+            sortDescriptor = ASC_SORT;
+            findPaneOfTypeByID(BUTTON_SORT, ButtonImage.class).setText(Component.literal("A^"));
         }
-        switch (sortDescriptor)
+        else
         {
-            case NO_SORT:
-                findPaneOfTypeByID(BUTTON_SORT, ButtonImage.class).setText(Component.literal("v^"));
-                break;
-            case ASC_SORT:
-                findPaneOfTypeByID(BUTTON_SORT, ButtonImage.class).setText(Component.literal("A^"));
-                break;
-            case DESC_SORT:
-                findPaneOfTypeByID(BUTTON_SORT, ButtonImage.class).setText(Component.literal("Av"));
-                break;
-            case COUNT_ASC_SORT:
-                findPaneOfTypeByID(BUTTON_SORT, ButtonImage.class).setText(Component.literal("1^"));
-                break;
-            case COUNT_DESC_SORT:
-                findPaneOfTypeByID(BUTTON_SORT, ButtonImage.class).setText(Component.literal("1v"));
-                break;
-            default:
-                break;
+            sortDescriptor = COUNT_DESC_SORT;
+            findPaneOfTypeByID(BUTTON_SORT, ButtonImage.class).setText(Component.literal("1v"));
         }
 
         updateResources();
@@ -226,10 +209,10 @@ public class WindowHutAllInventory extends AbstractWindowSkeleton
             filterItems.add(storage);
         });
         final Predicate<ItemStorage> filterPredicate = stack -> filter.isEmpty()
-                                                                  || stack.getItemStack().getDescriptionId().toLowerCase(Locale.US).contains(filter.toLowerCase(Locale.US))
-                                                                  || getString(stack.getItemStack())
-                                                                       .toLowerCase(Locale.US)
-                                                                       .contains(filter.toLowerCase(Locale.US));
+            || stack.getItemStack().getDescriptionId().toLowerCase(Locale.US).contains(filter.toLowerCase(Locale.US))
+            || getString(stack.getItemStack())
+            .toLowerCase(Locale.US)
+            .contains(filter.toLowerCase(Locale.US));
 
         allItems.clear();
         if (filter.isEmpty())
@@ -238,29 +221,19 @@ public class WindowHutAllInventory extends AbstractWindowSkeleton
         }
         else
         {
-            allItems.addAll(filterItems.stream().filter(filterPredicate).collect(Collectors.toList()));
+            allItems.addAll(filterItems.stream().filter(filterPredicate).toList());
+            allItems.sort(Comparator.comparingInt(s1 -> StringUtils.getLevenshteinDistance(s1.getItemStack().getHoverName().getString(), filter)));
         }
-        allItems.sort(Comparator.comparingInt(s1 -> StringUtils.getLevenshteinDistance(s1.getItemStack().getHoverName().getString(), filter)));
 
         final Comparator<ItemStorage> compareByName = Comparator.comparing((ItemStorage o) -> o.getItemStack().getHoverName().getString());
         final Comparator<ItemStorage> compareByCount = Comparator.comparingInt(ItemStorage::getAmount);
         switch (sortDescriptor)
         {
-            case NO_SORT:
-                break;
             case ASC_SORT:
                 allItems.sort(compareByName);
                 break;
-            case DESC_SORT:
-                allItems.sort(compareByName.reversed());
-                break;
-            case COUNT_ASC_SORT:
-                allItems.sort(compareByCount);
-                break;
             case COUNT_DESC_SORT:
                 allItems.sort(compareByCount.reversed());
-                break;
-            default:
                 break;
         }
 
@@ -269,6 +242,7 @@ public class WindowHutAllInventory extends AbstractWindowSkeleton
 
     /**
      * Get identifying string from itemstack.
+     *
      * @param stack the stack to gen the string from.
      * @return a single string.
      */
